--- a/docker-compose/envs/u2u.env
+++ b/docker-compose/envs/u2u.env
@@ -8,7 +8,7 @@ ETHEREUM_JSONRPC_TRACE_URL=http://127.0.0.1:8545/
 # ETHEREUM_JSONRPC_HTTP_TIMEOUT=
 NETWORK=U2U
 SUBNETWORK=Nebulas Testnet
-LOGO=/images/blockscout_logo.svg
+LOGO=/images/nebulas_logo.svg
 # ETHEREUM_JSONRPC_WS_URL=
 ETHEREUM_JSONRPC_TRANSPORT=http
 ETHEREUM_JSONRPC_DISABLE_ARCHIVE_BALANCES=false
@@ -20,7 +20,7 @@ BLOCKSCOUT_PROTOCOL=
 # SECRET_KEY_BASE=
 # CHECK_ORIGIN=
 PORT=4000
-COIN_NAME=
+COIN_NAME=U2U
 # METADATA_CONTRACT=
 # VALIDATORS_CONTRACT=
 # KEYS_MANAGER_CONTRACT=
@@ -65,7 +65,7 @@ BLOCK_TRANSFORMER=base
 # FOOTER_TELEGRAM_LINK_ENABLED=
 # FOOTER_TELEGRAM_LINK=
 # FOOTER_GITHUB_LINK=
-FOOTER_LOGO=/images/blockscout_logo.svg
+FOOTER_LOGO=/images/nebulas_logo.svg
 FOOTER_LINK_TO_OTHER_EXPLORERS=false
 FOOTER_OTHER_EXPLORERS={}
 SUPPORTED_CHAINS={}
