--- a/docker-compose/envs/u2u.env
+++ b/docker-compose/envs/u2u.env
@@ -144,7 +144,7 @@ SHOW_TXS_CHART=true
 TXS_HISTORIAN_INIT_LAG=0
 TXS_STATS_DAYS_TO_COMPILE_AT_INIT=10
 COIN_BALANCE_HISTORY_DAYS=90
-APPS_MENU=true
+APPS_MENU=false
 EXTERNAL_APPS=[]
 # GAS_PRICE=
 # RESTRICTED_LIST=
@@ -154,9 +154,9 @@ MAINTENANCE_ALERT_MESSAGE=
 SOURCIFY_INTEGRATION_ENABLED=false
 SOURCIFY_SERVER_URL=
 SOURCIFY_REPO_URL=
-CHAIN_ID=
+CHAIN_ID=2484
 MAX_SIZE_UNLESS_HIDE_ARRAY=50
-HIDE_BLOCK_MINER=false
+HIDE_BLOCK_MINER=true
 DISPLAY_TOKEN_ICONS=false
 SHOW_TENDERLY_LINK=false
 TENDERLY_CHAIN_PATH=
