--- a/docker-compose/docker-compose-u2u.yml
+++ b/docker-compose/docker-compose-u2u.yml
@@ -1,60 +1,79 @@
-version: '3.8'
+version: '3.9'
 
 services:
-  redis_db:
+  redis-db:
     extends:
-      file: ./services/docker-compose-redis.yml
-      service: redis_db
+      file: ./services/redis.yml
+      service: redis-db
+
+  db-init:
+    extends:
+      file: ./services/db.yml
+      service: db-init
 
   db:
+    depends_on:
+      db-init:
+        condition: service_completed_successfully
     extends:
-      file: ./services/docker-compose-db.yml
+      file: ./services/db.yml
       service: db
 
-  blockscout:
+  backend:
     depends_on:
       - db
-      - smart-contract-verifier
-      - redis_db
-    image: blockscout/blockscout:${DOCKER_TAG:-latest}
-    build:
-      context: ..
-      dockerfile: ./docker/Dockerfile
-      args:
-        CACHE_EXCHANGE_RATES_PERIOD: ""
-        API_V1_READ_METHODS_DISABLED: "false"
-        DISABLE_WEBAPP: "false"
-        API_V1_WRITE_METHODS_DISABLED: "false"
-        CACHE_TOTAL_GAS_USAGE_COUNTER_ENABLED: ""
-        CACHE_ADDRESS_WITH_BALANCES_UPDATE_INTERVAL: ""
-        ADMIN_PANEL_ENABLED: ""
-        RELEASE_VERSION: 5.2.1
-    restart: always
-    stop_grace_period: 5m
-    container_name: 'blockscout'
+      - redis-db
+    extends:
+      file: ./services/backend.yml
+      service: backend
     links:
       - db:database
-    command: sh -c "bin/blockscout eval \"Elixir.Explorer.ReleaseTasks.create_and_migrate()\" && bin/blockscout start"
-    extra_hosts:
-      - 'host.docker.internal:host-gateway'
-    env_file:
-      -  ./envs/u2u.env
-    ports:
-      - 80:4000
-    volumes:
-      - ./logs/:/app/logs/
-
-  smart-contract-verifier:
-    extends:
-      file: ./services/docker-compose-smart-contract-verifier.yml
-      service: smart-contract-verifier
+    environment:
+        ETHEREUM_JSONRPC_VARIANT: 'geth'
 
   visualizer:
     extends:
-      file: ./services/docker-compose-visualizer.yml
+      file: ./services/visualizer.yml
       service: visualizer
 
   sig-provider:
     extends:
-      file: ./services/docker-compose-sig-provider.yml
+      file: ./services/sig-provider.yml
       service: sig-provider
+
+  frontend:
+    depends_on:
+      - backend
+    extends:
+      file: ./services/frontend.yml
+      service: frontend
+
+  stats-db-init:
+    extends:
+      file: ./services/stats.yml
+      service: stats-db-init
+
+  stats-db:
+    depends_on:
+      stats-db-init:
+        condition: service_completed_successfully
+    extends:
+      file: ./services/stats.yml
+      service: stats-db
+
+  stats:
+    depends_on:
+      - stats-db
+      - backend
+    extends:
+      file: ./services/stats.yml
+      service: stats
+
+  proxy:
+    depends_on:
+      - backend
+      - frontend
+      - stats
+    extends:
+      file: ./services/nginx.yml
+      service: proxy
