--- a/docker-compose/services/backend.yml
+++ b/docker-compose/services/backend.yml
@@ -5,7 +5,7 @@ services:
     image: blockscout/${DOCKER_REPO:-blockscout}:${DOCKER_TAG:-latest}
     build:
       context: ..
-      dockerfile: ./docker/Dockerfile
+      dockerfile: ../docker/Dockerfile
       args:
         CACHE_EXCHANGE_RATES_PERIOD: ""
         API_V1_READ_METHODS_DISABLED: "false"
