--- a/docker-compose/docker-compose-u2u.yml
+++ b/docker-compose/docker-compose-u2u.yml
@@ -18,18 +18,46 @@ services:
     extends:
       file: ./services/db.yml
       service: db
-
-  backend:
+      
+   backend:
     depends_on:
       - db
-      - redis-db
-    extends:
-      file: ./services/backend.yml
-      service: backend
-    links:
-      - db:database
+      - smart-contract-verifier
+      - redis_db
+    image: blockscout/blockscout:${DOCKER_TAG:-latest}
+    build:
+      context: ..
+      dockerfile: ./docker/Dockerfile
+      args:
+        CACHE_EXCHANGE_RATES_PERIOD: ""
+        API_V1_READ_METHODS_DISABLED: "false"
+        DISABLE_WEBAPP: "false"
+        API_V1_WRITE_METHODS_DISABLED: "false"
+        CACHE_TOTAL_GAS_USAGE_COUNTER_ENABLED: ""
+        CACHE_ADDRESS_WITH_BALANCES_UPDATE_INTERVAL: ""
+        ADMIN_PANEL_ENABLED: ""
+        RELEASE_VERSION: 5.2.1
     environment:
         ETHEREUM_JSONRPC_VARIANT: 'geth'
+    restart: always
+    stop_grace_period: 5m
+    container_name: 'blockscout'
+    links:
+      - db:database
+    command: sh -c "bin/blockscout eval \"Elixir.Explorer.ReleaseTasks.create_and_migrate()\" && bin/blockscout start"
+    extra_hosts:
+      - 'host.docker.internal:host-gateway'
+    env_file:
+      -  ./envs/u2u.env
+    ports:
+      - 4000:4000
+    volumes:
+      - ./logs/:/app/logs/
+    logging:
+      driver: "json-file"
+      options:
+        max-size: 300m
+      
 
   visualizer:
     extends:
