--- a/docker-compose/docker-compose-u2u.yml
+++ b/docker-compose/docker-compose-u2u.yml
@@ -1,22 +1,14 @@
 version: '3.9'
 
 services:
-  redis-db:
+  redis_db:
     extends:
-      file: ./services/redis.yml
-      service: redis-db
-
-  db-init:
-    extends:
-      file: ./services/db.yml
-      service: db-init
+      file: ./services/docker-compose-redis.yml
+      service: redis_db
 
   db:
-    depends_on:
-      db-init:
-        condition: service_completed_successfully
     extends:
-      file: ./services/db.yml
+      file: ./services/docker-compose-db.yml
       service: db
       
    backend:
@@ -59,49 +51,39 @@ services:
         max-size: 300m
       
 
+  smart-contract-verifier:
+    extends:
+      file: ./services/docker-compose-smart-contract-verifier.yml
+      service: smart-contract-verifier
+
   visualizer:
     extends:
-      file: ./services/visualizer.yml
+      file: ./services/docker-compose-visualizer.yml
       service: visualizer
 
   sig-provider:
     extends:
-      file: ./services/sig-provider.yml
+      file: ./services/docker-compose-sig-provider.yml
       service: sig-provider
-
-  frontend:
+  
+  stats-db:
     depends_on:
       - backend
     extends:
-      file: ./services/frontend.yml
-      service: frontend
-
-  stats-db-init:
-    extends:
-      file: ./services/stats.yml
-      service: stats-db-init
-
-  stats-db:
-    depends_on:
-      stats-db-init:
-        condition: service_completed_successfully
-    extends:
-      file: ./services/stats.yml
+      file: ./services/docker-compose-stats.yml
       service: stats-db
 
   stats:
     depends_on:
       - stats-db
-      - backend
     extends:
-      file: ./services/stats.yml
+      file: ./services/docker-compose-stats.yml
       service: stats
 
   proxy:
     depends_on:
       - backend
-      - frontend
       - stats
     extends:
-      file: ./services/nginx.yml
+      file: ./services/docker-compose-nginx.yml
       service: proxy
