--- a/docker-compose/docker-compose-u2u.yml
+++ b/docker-compose/docker-compose-u2u.yml
@@ -16,7 +16,9 @@ services:
       - db
       - smart-contract-verifier
       - redis_db
-    image: blockscout/blockscout:${DOCKER_TAG:-latest}
+    extends:
+      file: ./services/backend.yml
+      service: backend
     build:
       context: ..
       dockerfile: ./docker/Dockerfile
@@ -28,21 +30,7 @@ services:
         CACHE_TOTAL_GAS_USAGE_COUNTER_ENABLED: ""
         CACHE_ADDRESS_WITH_BALANCES_UPDATE_INTERVAL: ""
         ADMIN_PANEL_ENABLED: ""
-        RELEASE_VERSION: 6.0.0
-    environment:
-        ETHEREUM_JSONRPC_VARIANT: 'geth'
-    restart: always
-    stop_grace_period: 5m
-    container_name: 'blockscout'
-    links:
-      - db:database
-    command: sh -c "bin/blockscout eval \"Elixir.Explorer.ReleaseTasks.create_and_migrate()\" && bin/blockscout start"
-    extra_hosts:
-      - 'host.docker.internal:host-gateway'
-    env_file:
-      -  ./envs/u2u.env
-    ports:
-      - 4000:4000
+        RELEASE_VERSION: 6.3.0
     volumes:
       - ./logs/:/app/logs/
     logging:
