--- a/docker-compose/docker-compose-u2u.yml
+++ b/docker-compose/docker-compose-u2u.yml
@@ -19,7 +19,10 @@ services:
     extends:
       file: ./services/backend.yml
       service: backend
-   
+    logging:
+      driver: "json-file"
+      options:
+        max-size: 300m
   smart-contract-verifier:
     extends:
       file: ./services/docker-compose-smart-contract-verifier.yml
