--- a/docker-compose/docker-compose-u2u.yml
+++ b/docker-compose/docker-compose-u2u.yml
@@ -16,6 +16,18 @@ services:
       - db
       - smart-contract-verifier
       - redis_db
+    build:
+      context: ..
+      dockerfile: ../docker/Dockerfile
+      args:
+        CACHE_EXCHANGE_RATES_PERIOD: ""
+        API_V1_READ_METHODS_DISABLED: "false"
+        DISABLE_WEBAPP: "false"
+        API_V1_WRITE_METHODS_DISABLED: "false"
+        CACHE_TOTAL_GAS_USAGE_COUNTER_ENABLED: ""
+        CACHE_ADDRESS_WITH_BALANCES_UPDATE_INTERVAL: ""
+        ADMIN_PANEL_ENABLED: ""
+        RELEASE_VERSION: 6.3.3
     extends:
       file: ./services/backend.yml
       service: backend
