--- a/docker-compose/docker-compose-u2u.yml
+++ b/docker-compose/docker-compose-u2u.yml
@@ -18,7 +18,7 @@ services:
       - redis_db
     build:
       context: ..
-      dockerfile: ../docker/Dockerfile
+      dockerfile: ./docker/Dockerfile
       args:
         CACHE_EXCHANGE_RATES_PERIOD: ""
         API_V1_READ_METHODS_DISABLED: "false"
