--- a/docker-compose/envs/frontend-mainnet.env
+++ b/docker-compose/envs/frontend-mainnet.env
@@ -8,7 +8,7 @@ NEXT_PUBLIC_NETWORK_NAME=U2U Solaris Mainnet
 NEXT_PUBLIC_NETWORK_SHORT_NAME=Solaris
 NEXT_PUBLIC_NETWORK_ID=39
 NEXT_PUBLIC_NETWORK_RPC_URL=https://rpc-mainnet.uniultra.xyz
-NEXT_PUBLIC_NETWORK_CURRENCY_NAME=Unicorn Ultra Token
+NEXT_PUBLIC_NETWORK_CURRENCY_NAME=U2U Token
 NEXT_PUBLIC_NETWORK_CURRENCY_SYMBOL=U2U
 NEXT_PUBLIC_NETWORK_CURRENCY_DECIMALS=18
 NEXT_PUBLIC_NETWORK_VERIFICATION_TYPE=validation
